--- a/axmol-2_4_0_lib/axmol-2_4_0_lib.html
+++ b/axmol-2_4_0_lib/axmol-2_4_0_lib.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset=utf-8>
 <meta content="text/html; charset=utf-8"http-equiv=Content-Type>
+<meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp"/>
+<meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin"/>
 <title>Emscripten-Generated Code</title>
 <style>.emscripten{padding-right:0;margin-left:auto;margin-right:auto;display:block}textarea.emscripten{font-family:monospace;display:inline;width:100%}div.emscripten{margin-left:0;text-align:center}div.emscripten_border{margin-left:0;border:1px solid #000}canvas.emscripten{border:0 none;background-color:#000}@-webkit-keyframes rotation{from{-webkit-transform:rotate(0)}to{-webkit-transform:rotate(360deg)}}@-moz-keyframes rotation{from{-moz-transform:rotate(0)}to{-moz-transform:rotate(360deg)}}@-o-keyframes rotation{from{-o-transform:rotate(0)}to{-o-transform:rotate(360deg)}}@keyframes rotation{from{transform:rotate(0)}to{transform:rotate(360deg)}}</style>
 </head>
